tests/sema/err_arg_type.diag
err_arg_type.ax:1:1: error: type mismatch: expected 3, found 12
