tests/sema/err_arg_type.ax
fn foo(x: i32):
    let y = x

fn main():
    foo("hello")
